# NeuronAnalysisToolbox

./:  to delete190506.m  AshleyAnalysis.asv  AshleyAnalysis.m  Calculating_Fraction_of_Total_Accumulation_in_AIS.m  FRAP.asv  FRAP.m  FRAP_ROI.asv  FRAP_ROI.m  FolderMaker_ObjFilter_sam.m  GUIhelpers.m  GeneralAnalysis.asv  GeneralAnalysis.m  RecruitmentAnalysis.m  SIManalysis_foldermaker.m  Vamp2AbIntensity.asv  Vamp2AbIntensity.m  callingDistanceFunction.m  callingFRAP.asv  callingFRAP.m  callingTypicalShortestPath.m  channelBase.asv  channelBase.m  channelCellFill.m  channelSurfaceCargo.m  channelmiscChannel.m  loadtiff.m  max_sum.m  runfile4imagecleanup.m  scatter2heatmap.m  script4masking.m  startup.m  stepthroughmindistmask.m  timedriftCorrect_parfor.m  timedriftcorrection.m  trackMovieMakerDemo.m  typicalShortestPath.m  writeDipImageMovie.m
180626_AshleyAnalysisTesting/: FixingUpTimeSeries.asv  FixingUpTimeSeries.m  groupingMstructures.asv  groupingMstructures.m  startup.m
Ashley's Scripts/: ImportTxtFiles_Updated.m  makingcombinedhistogramPlots.m  makinghistogramPlots.m  plottingsomethingsII.m  script4masking.m
AshleyAnalysis/: AshleyAnalysis.asv  AshleyAnalysis.m  AshleyAnalysisGUI.m  AshleyAnalysisII.mlapp  AshleyFiles.mlapp  app1.mlapp  channelCellFill.m  channelSurfaceCargo.m  channelTfR.m  createComponents.m  forGUi.m  makingAnkGstitch.m  makingAshleyFiles.m  stitching190328.m  testfile.m
Ashleys Scripts/: CreatingAshleyAnalysisFiles_180906.m  CreatingAshleyAnalysisFiles_190426.asv  CreatingAshleyAnalysisFiles_190426.m  NoReleaseControls_GluA1_ExportedfromMATLAB.xls  app1.mlapp  baseApp.mlapp  caesar.m  calculating_timeto10or50perc_max.m  calculatingmeanintensities_180620.asv  calculatingmeanintensities_180620.m  callingDistanceFunction.m  callingDistanceFunctionII.m  cell2_control.xls  cleanUpMask_byframe_square.m  control_cell2.xls  copyOverAshleyFiles.m  cuttingoutedges.m  eligible.m  forPlottingDistances_190424_fig3.m  generatingsomefigsforAMBposterII_GRC180621.m  generatingsomefigsforAMBposter_GRC180621.m  get_distance.m  groupingData.asv  groupingData.m  imageloading.mlapp  loopingthrough.m  makingAlltheMinFrameMovies.m  makingAshFiles190520.m  makingHeatMaps.m  masking.mlapp  picker.m  plottingsomethings.m  plottingsomethingsII.m  runFile.m  script4masking.m  script4masking_withshifting.m  script4masking_withshiftingcombining_amb.m  somethings_190319.m  test.eps  toCalculateImageIntensityoverTime.m  (+1 more)
Bill rGeco/: Dendritic_rGecoAnalysis.m  rGecoAnalysis.m
For Chris/: ChrisO.m  ChrisObara.m  ForChris.m  loadtiff.m  settingpaths.m
HelperThings/: DHFRquantification.m  DHFRquantificationII.m  FRAPingAnalysis1comp.m  GeometricDist_MLEandMCMC.m  LibTiff.m  LoG_threshold.m  NL1insertion_050118.m  NeuronAnalysis.m  Read_lif_files_with_bioformats.m  blue.m  ccll.m  dip_makemovie.m  dip_makemovie_calcium.m  dir2cell.m  exampleSliderCallBack.m  green.m  imgshift.m  jetblack.m  lif.m  mask_img.m  maskingAshleydata_180511.m  maskperim.m  padzeros.m  red.m  registerMultiChannelImage.m  registerTwoImages.m  remakeRegistration_forChannelImagedEveryNFrames.m  saveFigure_eps.m  selectMultipleFiles.m  shift_withpadding.m  uiopen.m  writeDipImageMovie.m
InProgress/: BillAnalysis.m  BillAnalysisII.m  BillCalcium_rGecko.m  CU_FRAP.m  CU_FRAP_ROI.m  (+22 more)
SMA_Toolbox/tools/DEstimator/: CMakeLists.txt
SMA_Toolbox/tools/DEstimator/src/: CMakeLists.txt  DCompLib.cpp  DCompLib.h  DEstimator_Iface.cpp  DEstimator_Iface.h  Optimizer1D.cpp  Optimizer1D.h  destimator.cpp  destimator.h  test_destimator.cpp
SMA_Toolbox/tools/HSData/src/: CMakeLists.txt  HSData.cpp  HSData.h  HSData_Iface.cpp  HSData_Iface.h  test_hsdata.cpp
SMA_Toolbox/tools/MexIface/src/: CMakeLists.txt  Handle.h  MexUtils.cpp  MexUtils.h  Mex_Iface.cpp  Mex_Iface.h  hypercube.h
SMA_Toolbox/tools/PairInteraction/: CMakeLists.txt
SMA_Toolbox/tools/PairInteraction/src/: CMakeLists.txt  PairInteractionSMC_Iface.cpp  PairInteractionSMC_Iface.h  computations.cpp  computations.h  gaussianangle.cpp  gaussianangle.h  pairinteractionsmc.cpp  pairinteractionsmc.h  rngmanager.cpp  rngmanager.h  test_pairinteraction.cpp  unscentedtransform.cpp  unscentedtransform.h  vonmises.cpp  vonmises.h
SMA_Toolbox/tools/RDCapture/: CMakeLists.txt
SMA_Toolbox/tools/RDCapture/src/: CMakeLists.txt  RDCapture_Iface.cpp  RDCapture_Iface.h  bessel.cpp  bessel.h  laplacetform.cpp  laplacetform.h  rdcapture.cpp  rdcapture.h  rdcapture_cache.cpp  rdcapture_cache.h  rombergint.cpp  rombergint.h  test_rdcapture.cpp
(+553 files in other folders)
